# dubugger86x-64bit

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cmake.toml  docker-build.sh  docker-compose.yml  docker-install-msvc.sh  test_script.txt
.github/format/: install-git-hook.bat
.github/workflows/: build.yml  cross.yml  format.yml
cmake/: VSFlags.cmake  cmkr.cmake  deps.cmake
docs/developers/: tracefile.md
src/bridge/: bridgemain.cpp  bridgemain.h
src/cross/widgets/: Configuration.cpp  MiscUtil.cpp  MiscUtil.h
src/dbg/: TraceRecord.cpp  _exports.cpp  _global.cpp  _plugins.cpp  _plugins.h  debugger.cpp  debugger.h  debugger_tracing.h  disasm_helper.cpp  dynamicmem.h  exception.cpp  exhandlerinfo.cpp  expressionparser.cpp  expressionparser.h  exprfunc.cpp  filehelper.cpp  filemap.h  memory.cpp  module.cpp  module.h  murmurhash.cpp  murmurhash.h  reference.cpp  stringformat.cpp  stringutils.h  symbolinfo.cpp  value.cpp  value.h  variable.cpp  variable.h  x64dbg.cpp
src/dbg/commands/: cmd-analysis.cpp  cmd-debug-control.cpp  cmd-general-purpose.cpp  cmd-gui.cpp  cmd-memory-operations.cpp  cmd-memory-operations.h  cmd-searching.cpp  cmd-searching.h  cmd-thread-control.cpp  cmd-tracing.cpp  cmd-tracing.h  cmd-user-database.cpp  cmd-variables.cpp
src/exe/: signaturecheck.cpp  x64dbg_exe.cpp
src/gui/Src/: main.cpp  main.h
src/gui/Src/Accessible/: Accessible.cpp  Accessible.h  AccessibleAbstractTableView.cpp  (+15 more)
src/headless/: headless.cpp  stringutils.cpp
src/test/screenreader/: README.md  pyproject.toml  screenreader_check.py  ui_common.py  ui_dump.py
(+67 files in other folders)
